--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ main {
 
 .card {
   border-radius: 0;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(241, 119, 119, 0.313),
+    0 3px 1px -2px rgba(225, 104, 104, 0.338), 0 1px 5px 0 #ec888867;
   margin-bottom: 15vh;
 }
