--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
-main {
+/* main {
   width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding-top: 15vh;
-  height: calc(100vh - 56px); /* router view - navbar height */
+  height: calc(100vh - 56px); router view - navbar height
   overflow: scroll;
   color: white;
-}
+} */
 
 .card {
   border-radius: 0;
-  box-shadow: 0 2px 2px 0 rgba(241, 119, 119, 0.313),
-    0 3px 1px -2px rgba(225, 104, 104, 0.338), 0 1px 5px 0 #ec888867;
+  box-shadow: 0 1px 1px 0 var(--primary-color),
+    0 1px 1px -1px var(--primary-color), 0 0.5px 1px 0 var(--primary-color);
   margin-bottom: 15vh;
 }
