--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -1,3 +1,29 @@
-.card {
-    border-radius: 25px;
+.card__container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.login__card {
+  border-radius: 25px;
+  width: 50%;
+}
+
+.login__btn {
+  color: var(--white-color);
+  background-color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
+
+.login__btn:hover {
+  background-color: var(--white-color);
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+}
+
+@media (max-width: 767px) {
+  .card {
+    width: 75%;
+  }
 }
