--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,4 +1,4 @@
-.NavBar {
+/* .NavBar {
     background-color: rgb(240, 93, 67);
     border-bottom: 2px solid rgba(219, 195, 195, 0.125);
     color: whitesmoke;
@@ -37,9 +37,159 @@
       color: white;
       border: 1px solid white;
       border-radius: 10px;
-      background-color: rgb(240, 93, 67);
+      background-color: #f05d43;
       font-weight: 300;
   }
   .nav-link:hover {
     color: rgb(83, 50, 50);
+  } */
+
+.header {
+  padding: 20px 0;
+  background: var(--primary-color);
+  box-shadow: 0px -2px 10px var(--white-color);
+  transition: 0.3s;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.header__body {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__logo {
+  font-weight: 500;
+  font-size: 28px;
+  color: var(--white-color);
+  transition: 0.3s;
+}
+
+.header__link:focus {
+  outline-color: var(--white-color);
+  outline-style: solid;
+  outline-width: 1px;
+  outline-offset: 5px;
+}
+
+.header__rightside {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.header-menu__list {
+  display: flex;
+  align-items: center;
+}
+
+.header-menu__item {
+  padding: 0 20px;
+}
+
+.header-menu__link {
+  font-weight: 500;
+  font-size: 18px;
+  color: var(--white-color);
+  display: inline-flex;
+  position: relative;
+  transition: 0.3s;
+}
+
+.header-menu__link:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  width: 0;
+  height: 2px;
+  background: var(--white-color);
+  border-radius: 2px;
+  transition: 0.3s;
+}
+
+.header-menu__link:hover:after {
+  width: 100%;
+}
+
+/* .header__moon {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  font-size: 24px;
+  color: var(--text-color);
+  cursor: pointer;
+  transition: 0.3s;
+} */
+
+.header__mob-menu {
+  margin-left: 10px;
+  font-size: 26px;
+  color: var(--white-color);
+  cursor: pointer;
+  transition: 0.3s;
+  display: flex;
+  align-items: center;
+}
+
+.header__mob {
+  display: none;
+}
+
+/* Media Queries */
+
+@media (max-width: 1023px) {
+  .header-menu__link {
+    font-size: 16px;
   }
+  .header__logo {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    padding: 20px 0;
+  }
+
+  .header-menu {
+    position: fixed;
+    top: 69px;
+    left: 100%;
+    width: 100%;
+    height: calc(100vh - 69px);
+    background: var(--primary-color);
+    color: var(--white-color);
+    opacity: 0.93;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s;
+  }
+
+  .header-menu.is-active {
+    left: 0;
+  }
+
+  .header-menu__list {
+    flex-direction: column;
+  }
+
+  .header__mob {
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  .header-menu__item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .header-menu__link {
+    font-size: 24px;
+  }
+}
