--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,54 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-  "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  overflow: scroll;
+/* Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 
+:root {
+  --primary-color: #f05d43;
+  --white-color: #ffffff;
+  --alt-white: #fff6d4;
+  --text-color: #496f73;
+  --gray-color: #888888;
+  --invert-primary-color: #586ba4;
+  --invert-text-color: #ffffff;
+  --invert-bg-color: #2b3137;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-padding-top: 80px;
+}
+
+body {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  font-family: "Source Sans Pro", sans-serif;
+  background: var(--white-color);
+  transition: 0.3s;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--alt-white);
+}
+
+ul {
+  list-style: none;
+}
+
+.container {
+  max-width: 1100px;
+  padding: 0 10px;
+  width: 100%;
+}
+
+.card {
+  border-radius: 0;
+  box-shadow: 0 1px 1px 0 var(--primary-color),
+    0 1px 1px -1px var(--primary-color), 0 0.5px 1px 0 var(--primary-color);
+  margin-bottom: 15vh;
 }
