--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,49 +1,3 @@
-/* .NavBar {
-    background-color: rgb(240, 93, 67);
-    border-bottom: 2px solid rgba(219, 195, 195, 0.125);
-    color: whitesmoke;
-    font-size: 18px;
-    font-weight:500;
-  }
-
-  .nav-link.active {
-    color: rgb(83, 50, 50);
-    background-color: rgb(248, 151, 151);
-  }
-
-  .navbar-brand {
-    text-align: center;
-    color: white;
-    border: 1px solid white;
-    border-radius: 10px;
-    max-width: 125px;
-    margin-right: 125px;
-    margin-left: 25px;
-    font-weight: 300;
-  }
-
-  .navbar-brand:hover {
-    color: rgb(83, 50, 50);
-
-  }
-
-  .navbar-brand:active {
-    color: rgb(83, 50, 50);
-    background-color: rgb(248, 151, 151);
- }
-
-  .nav-link {
-      text-align: center;
-      color: white;
-      border: 1px solid white;
-      border-radius: 10px;
-      background-color: #f05d43;
-      font-weight: 300;
-  }
-  .nav-link:hover {
-    color: rgb(83, 50, 50);
-  } */
-
 .header {
   padding: 20px 0;
   background: var(--primary-color);
@@ -54,6 +8,11 @@
   left: 0;
   width: 100%;
   z-index: 1;
+}
+.header__container {
+  max-width: 1100px;
+  padding: 0 10px;
+  width: 100%;
 }
 
 .header__body {
@@ -67,6 +26,10 @@
   font-size: 28px;
   color: var(--white-color);
   transition: 0.3s;
+}
+
+.header__link:hover {
+  color: var(--alt-white);
 }
 
 .header__link:focus {
