--- a/src/ListingDetail.css
+++ b/src/ListingDetail.css
@@ -1,16 +1,60 @@
-.ListingDetail-img {
-  border-radius: 25px;
-  height: 600px;
-  width: 750px;
-  margin-right: 10px;
+.listingDetail-card {
+  display: flex;
+  align-items: center;
+  margin-top: 25px;
 }
 
-.ListingDetail-card {
-  height: 600px;
-  margin-left: 10px;
+.listing-title {
+  font-size: 42px;
+  font-weight: 600;
+  color: var(--text-color);
+}
+
+.listingDetail-img img {
+  float: left;
+  height: 400px;
+  width: 600px;
+  border-radius: 10px;
+}
+
+.listing-location {
+  font-size: 18px;
+}
+
+.listing-right-side {
+  margin-left: 20px;
 }
 
 .listings-card {
-  background-color: rgb(240, 93, 67);
-  color: white;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid var(--primary-color);
+  width: 100%;
+  height: 400px;
+  border-radius: 10px;
+  padding: 20px;
+  /* background-color: var(--primary-color); */
+  font-size: 1.2rem;
+  color: var(--text-color);
+}
+
+.listing-description {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.listing-price {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.btn-container {
+  align-content: flex-end;
+}
+.listing-btn {
+  background-color: var(--primary-color);
+  border-radius: 20px;
+  padding: 0 25px;
+  font-size: 16px;
+  font-weight: 500;
 }
