--- a/src/ListingDetail.css
+++ b/src/ListingDetail.css
@@ -28,12 +28,13 @@
 .listings-card {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   border: 1px solid var(--primary-color);
+  box-shadow: 1px 1px 5px var(--primary-color);
   width: 100%;
   height: 400px;
   border-radius: 10px;
   padding: 20px;
-  /* background-color: var(--primary-color); */
   font-size: 1.2rem;
   color: var(--text-color);
 }
@@ -48,13 +49,51 @@
   font-weight: 600;
 }
 
-.btn-container {
-  align-content: flex-end;
-}
 .listing-btn {
   background-color: var(--primary-color);
   border-radius: 20px;
   padding: 0 25px;
   font-size: 16px;
   font-weight: 500;
+}
+
+@media (max-width: 1223px) {
+}
+
+@media (max-width: 1050px) {
+  .listingDetail-card {
+    flex-direction: column;
+  }
+
+  .listing-title {
+    font-size: 24px;
+  }
+
+  .listingDetail-img img {
+    width: 75%;
+    height: 275px;
+  }
+  .listing-right-side {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .listings-card {
+    width: fit-content;
+    padding: 8px;
+    justify-content: space-between;
+    border: none;
+    box-shadow: none;
+    overflow: auto;
+  }
+  .listing-location {
+    display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .listing__card {
+    min-width: 100%;
+  }
 }
