--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -7,10 +7,10 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 10;
 }
 .header__container {
-  max-width: 1100px;
+  max-width: 100%;
   padding: 0 10px;
   width: 100%;
 }
@@ -26,10 +26,11 @@
   font-size: 28px;
   color: var(--white-color);
   transition: 0.3s;
+  margin-left: 10px;
 }
 
 .header__link:hover {
-  color: var(--alt-white);
+  color: var(--white-color);
 }
 
 .header__link:focus {
