--- a/src/ListingDetail.css
+++ b/src/ListingDetail.css
@@ -114,6 +114,7 @@
 @media (max-width: 767px) {
   .listingDetail-img img {
     width: 100%;
+    height: auto;
     margin-left: 0;
   }
 
@@ -130,6 +131,7 @@
   }
 
   .icon-detail {
+    font-size: 36px;
     margin-top: 20px;
     margin-right: 20px;
   }
