--- a/src/SearchForm.css
+++ b/src/SearchForm.css
@@ -1,19 +1,40 @@
 .search__field {
-  width: 500px;
+  width: 550px;
+  box-shadow: 0 0 3px var(--gray-color);
+  padding: 10px;
+  padding-right: 20px;
   border-radius: 20px;
+  position: relative;
+}
+
+.search__field:focus {
+  border-color: var(--primary-color);
+  box-shadow: 0 0 10px var(--light-gray);
 }
 
 .btn__search {
-  color: var(--white-color);
-  border: 1px solid var(--white-color);
-  border-radius: 20px;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
+  color: var(--primary-color);
+  box-shadow: 0 0 3px var(--gray-color);
+  padding: 10px 20px;
+  padding-left: 30px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
   margin-left: -15px;
-  padding-left: 20px;
   border-left: none;
 }
 
 .btn__search:hover {
-  color: var(--alt-white);
+  color: var(--primary-color);
+  transition: 0.5s;
+}
+
+.btn__search:focus {
+  border-color: var(--primary-color);
+  box-shadow: 0 0 10px var(--light-gray);
+}
+
+@media (max-width: 767px) {
+  .search__field {
+    width: 350px;
+  }
 }
