--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
 
 :root {
-  --primary-color: #f05d43;
+  /* --primary-color: #f06a53; */
   --white-color: #ffffff;
   --alt-white: #fff6d4;
   --text-color: #232727;
+  --primary-color: #e46c57;
+  --light-gray: #b4bcbc;
   --gray-color: #888888;
   --invert-primary-color: #586ba4;
   --invert-text-color: #ffffff;
@@ -25,7 +27,6 @@ body {
   min-height: 100vh;
   font-family: "Source Sans Pro", sans-serif;
   background: var(--white-color);
-  transition: 0.3s;
 }
 
 a {
