--- a/src/ListingsList.css
+++ b/src/ListingsList.css
@@ -5,6 +5,13 @@
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+.search__container {
+  width: 100%;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
 
 .listings__container a:hover {
   color: var(--text-color);
