--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -2,12 +2,12 @@
   padding: 20px 0;
   background: var(--primary-color);
   box-shadow: 0px -2px 10px var(--white-color);
-  transition: 0.3s;
   position: sticky;
   top: 0;
   left: 0;
   width: 100%;
   z-index: 10;
+  transition: 0.3s;
 }
 .header__container {
   max-width: 100%;
@@ -25,8 +25,8 @@
   font-weight: 500;
   font-size: 28px;
   color: var(--white-color);
-  transition: 0.3s;
   margin-left: 10px;
+  transition: 0.3s;
 }
 
 .header__link:hover {
@@ -35,6 +35,7 @@
 
 .header__link:focus {
   outline-color: var(--white-color);
+  border-radius: 20px;
   outline-style: solid;
   outline-width: 1px;
   outline-offset: 5px;
@@ -88,7 +89,7 @@
   font-size: 24px;
   color: var(--text-color);
   cursor: pointer;
-  transition: 0.3s;
+    transition: 0.3s;
 } */
 
 .header__mob-menu {
@@ -96,9 +97,9 @@
   font-size: 26px;
   color: var(--white-color);
   cursor: pointer;
-  transition: 0.3s;
   display: flex;
   align-items: center;
+  transition: 0.3s;
 }
 
 .header__mob {
