--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,7 +1,7 @@
 .header {
   padding: 20px 0;
   background: var(--primary-color);
-  box-shadow: 0px -2px 10px var(--white-color);
+  box-shadow: 0px -2px 10px var(--gray-color);
   position: sticky;
   top: 0;
   left: 0;
@@ -10,7 +10,6 @@
   transition: 0.3s;
 }
 .header__container {
-  max-width: 100%;
   padding: 0 10px;
   width: 100%;
 }
@@ -35,7 +34,7 @@
 
 .header__link:focus {
   outline-color: var(--white-color);
-  border-radius: 20px;
+  border-radius: 5px;
   outline-style: solid;
   outline-width: 1px;
   outline-offset: 5px;
