--- a/src/LoginForm.css
+++ b/src/LoginForm.css
@@ -1,13 +1,10 @@
-.card__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .login__card {
-  border-radius: 25px;
-  width: 50%;
+  width: 40%;
+  padding: 10px 10px 15px 10px;
+  margin-top: 25px;
+}
+.icon-palm {
+  font-size: 300px;
 }
 
 .login__btn {
