--- a/src/NewListingForm.css
+++ b/src/NewListingForm.css
@@ -1,25 +1,18 @@
-.card__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
 .newListing__card {
-  border-radius: 25px;
-  width: 75%;
+  border-radius: 10px;
+  width: 50%;
 }
 
-.newLisitng__btn {
+input[type="file"]::file-selector-button {
+  border: 2px solid var(--primary-color);
   color: var(--white-color);
+  border-radius: 10px;
+  margin: 0 5px;
   background-color: var(--primary-color);
-  border: 1px solid var(--primary-color);
 }
 
-.newLisitng__btn:hover {
-  background-color: var(--white-color);
-  border: 1px solid var(--primary-color);
-  color: var(--primary-color);
+input[type="file"]::file-selector-button:hover {
+  transform: scale(1.03);
 }
 
 @media (max-width: 767px) {
