--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,7 +1,7 @@
 .header {
   padding: 10px 0;
-  background: var(--primary-color);
-  box-shadow: 0px -2px 10px var(--gray-color);
+  background: var(--white-color);
+  box-shadow: 0px -2px 5px var(--green-color);
   position: sticky;
   top: 0;
   left: 0;
@@ -20,16 +20,33 @@
   align-items: center;
 }
 
-.header__logo {
+/* .header__logo {
   font-weight: 500;
   font-size: 28px;
   color: var(--white-color);
   margin-left: 10px;
   transition: 0.3s;
+} */
+
+.header__logo img {
+  height: 45px;
+  margin-bottom: 10px;
+  margin-left: 25px;
+}
+
+.header__logo:hover {
+  box-shadow: none !important;
+}
+
+.header__logo img:hover {
+  box-shadow: 0 0.5px 0.5px 0 var(--green-color);
+  border-radius: 10px;
 }
 
 .header__link:hover {
-  color: var(--white-color);
+  color: var(--primary-color);
+  box-shadow: 0 0.5px 0.5px 0 var(--green-color);
+  border-radius: 10px;
 }
 
 .header__rightside {
@@ -50,7 +67,7 @@
 .header-menu__link {
   font-weight: 500;
   font-size: 18px;
-  color: var(--white-color);
+  color: var(--primary-color);
   display: inline-flex;
   position: relative;
   transition: 0.3s;
@@ -62,10 +79,10 @@
   left: 0;
   bottom: -10px;
   width: 0;
-  height: 2px;
+  height: 1px;
   background: var(--white-color);
   border-radius: 2px;
-  transition: 0.3s;
+  transition: 0.5s;
 }
 
 .header-menu__link:hover:after {
@@ -86,7 +103,7 @@
 .header__mob-menu {
   margin-left: 10px;
   font-size: 26px;
-  color: var(--white-color);
+  color: var(--primary-color);
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -115,17 +132,19 @@
 
   .header-menu {
     position: fixed;
-    top: 59px;
+    top: 76px;
     left: 100%;
     width: 100%;
-    height: calc(100vh - 59px);
-    background: var(--primary-color);
-    color: var(--white-color);
-    opacity: 0.93;
+    height: calc(100vh - 49px);
+    background: var(--green-color);
+    opacity: 0.9;
     display: flex;
     justify-content: center;
     align-items: center;
     transition: 0.5s;
+  }
+  .header__logo img {
+    margin-left: 0;
   }
 
   .header-menu.is-active {
@@ -148,5 +167,10 @@
   .header-menu__link {
     z-index: 5;
     font-size: 24px;
+    color: var(--white-color);
+  }
+
+  .header-menu__link:hover {
+    color: var(--white-color);
   }
 }
