--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 /* Google Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400&display=swap");
 :root {
   --primary-color: #e46c57;
   --white-color: #ffffff;
@@ -8,6 +7,7 @@
   --text-color: #232727;
   --light-gray: #b4bcbc;
   --gray-color: #888888;
+  --green-color: #415d43;
   --invert-primary-color: #586ba4;
   --invert-text-color: #ffffff;
   --invert-bg-color: #2b3137;
@@ -24,7 +24,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Montserrat", sans-serif;
   background: var(--white-color);
 }
 
