--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,16 +1,60 @@
-.profile-img {
-  max-width: 400px;
-  border: 2px solid var(--primary-color);
-  border-radius: 50%;
+.profile__container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.profile__userinfo {
+  display: flex;
+}
+.profile__container img {
+  width: 200px;
+  border-radius: 20px;
+  border: 1px solid var(--primary-color);
+}
+
+.profile__card {
+  width: 46%;
+}
+
+.profile__location {
+  color: var(--green-color);
+  font-size: 18px;
+  margin: 5px 0 0 5px;
+}
+
+.profile__details {
+  display: flex;
+}
+
+.profile__spaces {
+  font-size: 24px;
+  color: var(--primary-color);
+  font-weight: 400;
+}
+
+.placeholder__space {
+  height: 250px;
+  width: 315px;
+  margin-top: 10px;
+}
+
+.placeholder__space img {
+  height: 250px;
+  width: 315px;
+  border-radius: 10px;
+  border: none;
 }
 
 @media (max-width: 767px) {
   .profile__container {
-    display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 
-  .profile-img {
-    max-width: 300px;
+  .profile__card {
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    margin: 10px;
   }
 }
