changed homepage bg, fade-in timing

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   --light-gray: #b4bcbc;
   --gray-color: #888888;
   --green-color: #415d43;
+  --black-color: #0a0a0a;
   --invert-primary-color: #586ba4;
   --invert-text-color: #ffffff;
   --invert-bg-color: #2b3137;
