--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,21 +1,25 @@
 .Homepage {
   /* put around the vertical center of page */
-  min-height: calc(100vh - 110px);
+  min-height: calc(100vh - 70px);
   display: flex;
   align-items: center;
   color: var(--primary-color);
+  background-image: url("./assets/images/treehouse.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .Homepage-title {
   font-size: 76px;
   font-weight: 700;
-  text-shadow: 2px 2px 5px var(--gray-color);
+  text-shadow: 1px 1px 2px var(--black-color);
 }
 
 .Homepage-name {
   color: var(--primary-color);
   font-size: 42px;
-  text-shadow: 1px 1px 2.5px var(--gray-color);
+  text-shadow: 1px 1px 2.5px var(--black-color);
 }
 
 .Homepage-message {
@@ -23,12 +27,12 @@
   font-weight: 500;
   margin-top: -25px;
   font-style: italic;
-  color: var(--green-color);
+  color: var(--white-color);
   text-shadow: 0 1px 5px var(--gray-color);
 }
 
 .Homepage-welcome {
-  color: var(--green-color);
+  color: var(--white-color);
 }
 
 .btn__home {
@@ -47,18 +51,18 @@
 .btn-start {
   font-size: 20px;
   text-decoration: none;
-  color: var(--primary-color);
+  color: var(--white-color);
   border-radius: 10px;
   border: none;
-  box-shadow: 0 1px 1.5px 0px var(--gray-color);
-
-  /* border: 1px solid var(--primary-color); */
+  box-shadow: 0 1px 1.5px 0px var(--white-color);
 }
 
 .btn-start:hover {
   color: var(--white-color);
-  background-color: var(--green-color);
-  opacity: 0.9;
+  background-color: var(--primary-color);
+  box-shadow: none;
+  opacity: 0.8;
+  transition: 0.5s;
 }
 
 /* Fade-in effect */
@@ -119,15 +123,15 @@
 /* Fade-in effect - btn */
 
 .fade-in-btn {
-  animation: fadeIn ease 8s;
-  -webkit-animation: fadeIn ease 8s;
-  -moz-animation: fadeIn ease 8s;
-  -o-animation: fadeIn ease 8s;
-  -ms-animation: fadeIn ease 8s;
+  animation: fadeIn ease 5s;
+  -webkit-animation: fadeIn ease 5s;
+  -moz-animation: fadeIn ease 5s;
+  -o-animation: fadeIn ease 5s;
+  -ms-animation: fadeIn ease 5s;
 }
 
 @keyframes fadeIn {
-  0% {
+  15% {
     opacity: 0;
   }
   100% {
@@ -136,7 +140,7 @@
 }
 
 @-moz-keyframes fadeIn {
-  0% {
+  15% {
     opacity: 0;
   }
   100% {
@@ -145,7 +149,7 @@
 }
 
 @-webkit-keyframes fadeIn {
-  0% {
+  15% {
     opacity: 0;
   }
   100% {
@@ -154,7 +158,7 @@
 }
 
 @-o-keyframes fadeIn {
-  0% {
+  15% {
     opacity: 0;
   }
   100% {
@@ -163,7 +167,7 @@
 }
 
 @-ms-keyframes fadeIn {
-  0% {
+  15% {
     opacity: 0;
   }
   100% {
